force-app/main/default/objects/Framework_Forecast__c/Framework_Forecast__c.object-meta.xml
<CustomObject>
    <description>Umbrella record to hold all forecast figures for a given FY</description>
    <label>Framework Forecast</label>
    <nameField>
        <displayFormat>FF{000000}</displayFormat>
        <label>Forecast #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>