force-app/main/default/objects/Framework_Forecast__c/fields/Actual_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Actual_Record_Count__c</fullName>
    <description>Count of related Forecast Year records that are of the type &apos;Actual&apos;</description>
    <label>Actual Record Count</label>
    <summaryFilterItems>
        <field>Framework_Forecast_Year__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Actual</value>
    </summaryFilterItems>
    <summaryForeignKey>Framework_Forecast_Year__c.Forecast__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>