force-app/main/default/objects/Framework_Forecast__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Framework Forecasts</relationshipLabel>
    <relationshipName>Framework_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>