force-app/main/default/objects/Framework_Forecast__c/fields/Framework_and_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Framework_and_Plan_Year__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Framework and Plan Year</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>