force-app/main/default/objects/Framework_Forecast__c/fields/Total_Year_0_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_0_Actual__c</fullName>
    <label>Total Year 0 (Actual)</label>
    <summarizedField>Framework_Forecast_Year__c.Yearly_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Framework_Forecast_Year__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Actual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Framework_Forecast_Year__c.Relative_Forecast_Year__c</field>
        <operation>equals</operation>
        <value>Year 0</value>
    </summaryFilterItems>
    <summaryForeignKey>Framework_Forecast_Year__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>