force-app/main/default/objects/Framework_Forecast__c/fields/Year_0__c.field-meta.xml
<CustomField>
    <fullName>Year_0__c</fullName>
    <formula>2000 + Value(MID(TEXT(Business_Plan_Year__c),3,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>